// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render argument name 1`] = `
<Styled(Code)
  className="name"
>
  Foo
</Styled(Code)>
`;

exports[`renderer should render deprecated argument name 1`] = `
<Styled(Code)
  className="name isDeprecated"
>
  Foo
</Styled(Code)>
`;
